# Reader

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Rocket.toml  TODO.md  fixture.sql
app/: package.json  tsconfig.json
app/public/: index.html  manifest.json
app/src/: App.spec.tsx  App.tsx  Routes.tsx  index.css  index.tsx  react-app-env.d.ts  routes.ts  utils.ts
app/src/api/: client.ts  index.ts
app/src/components/: ApiRequestState.tsx  Container.css  Container.tsx
app/src/domain/: index.ts
app/src/hooks/: useLocalStorage.ts
app/src/pages/: LoginPage.tsx  NotFound.css  PostsPage.tsx
app/src/stores/: ApiStore.ts  CurrentUserStore.ts  PostsStore.ts  UiStore.ts  UserStore.ts  index.ts
docs/: INFRASTRUCTURE.md  infrastructure.md  reader.service
src/: bootstrap.rs  error.rs  lib.rs  main.rs
src/api/: assets.rs  authentication.rs  catchers.rs  endpoints.rs  mod.rs  routes.rs
src/db/: bootstrap.rs  entities.rs  mod.rs  pool.rs
src/db/migrations/: V1_initial.sql  _fixture.sql  schema_version.sql
src/db/queries/: find_posts.sql
src/feeds/: atom.rs  mod.rs  rss.rs  twitter.rs  utils.rs
src/feeds/snapshots/: atom_github.xml  atom_github_engineering.xml  atom_this_week_in_rust.xml  opml_feedly.xml  rss_hacker_news.xml  rss_kotlin.xml  rss_stopgame.xml  tests__parse_atom_golang.snap  (+8 more)
src/utils/: mod.rs
static/: index.html  site.webmanifest
tests/: api_authentication.rs  it_api.rs  it_api_authentication.rs  it_feeds.rs
tests/common/: client.rs  mock_server.rs  mod.rs
tests/snapshots/: it_api__auth_login_failed.snap  it_api__auth_login_success.snap  it_api__auth_logout_success.snap  it_api__get_categories_with_feeds.snap  it_api__get_post_content.snap  it_api__get_posts_all.snap  it_api__get_posts_all_from_post_id.snap.new  it_api__get_posts_category.snap  it_api__get_posts_feed.snap  it_api__get_posts_read_later.snap  it_api__get_posts_unread_count.snap  it_api__post_is_read__get_unread_count_after.snap  it_api__post_is_read__get_unread_count_before.snap  it_api__post_is_read_later__get_posts_after.snap  it_api__post_is_read_later__get_posts_before.snap  it_api__posts_all_mark_as_read.snap  it_api__posts_all_mark_as_read_last_10.snap  it_api__posts_category_mark_as_read.snap  it_api__posts_feed_mark_as_read.snap  it_feeds__atom_update_after.snap  it_feeds__atom_update_before.snap  it_feeds__rss_update_after.snap  it_feeds__rss_update_before.snap
tests/test_assets/: rss_feed.xml  test_fixture.sql
(+52 files in other folders)
