[package]
name = "reader"
version = "0.1.0"
authors = ["Dmitry Vrublevsky <dmitry@vrublevsky.me>"]
edition = "2018"

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
mime = "0.3.14"
rust-embed = "5.1.0"
rocket = "0.4.2"
r2d2 = "0.8.6"
r2d2_sqlite = "0.12.0"
reqwest = "0.9.22"
rss = "1.8.0"
serde = "1.0.103"
serde_json = "1.0.42"
serde_derive = "1.0.103"
time = "0.1.42"

[dependencies.chrono]
version = "0.4.10"
features = ["serde"]

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "helmet"]

[dependencies.rusqlite]
version = "0.20.0"
features = ["bundled", "chrono"]
