[package]
name = "reader"
version = "0.1.0"
authors = ["Dmitry Vrublevsky <dmitry@vrublevsky.me>"]
edition = "2018"
license = "GPL-3.0-only"

[dependencies]
# Web server
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features= ["json", "helmet"], default-features = false }

# JSON Serialization
serde = "1.0.103"
serde_json = "1.0.42"
serde_derive = "1.0.103"

# SQLite database bindings and connection pool
rusqlite = { version = "0.20.0", features = ["bundled", "chrono"] }
r2d2 = "0.8.6"
r2d2_sqlite = "0.12.0"

# Time utilities
chrono = { version = "0.4.10", features = ["serde"], default-features = false }
time = "0.1.42"

# Embed static assets into binary
rust-embed = "5.1.0"

# HTTP Client
reqwest = "0.9.22"

# Feed parsing
atom_syndication  = "0.6.0"
rss = "1.8.0"

# HTML cleanup
ammonia = "3.1.3"

# Utilities
lazy_static = "1.4.0"
mime = "0.3.14"
regex = "1"

# Logging
log = "0.4.8"
env_logger = "0.7.1"

[dev-dependencies]
# Snapshot testing
insta = "0.12.0"
